HelloUltraviolet/Fixtures/RejectedSource/FFI/InvalidUnwindMode/Source/Main.uv
//! Rejected FFI specimen for invalid unwind attribute modes.

[[export("C")]]
[[unwind("resume")]]
public procedure invalidUnwindModeReference() -> i32 {
    return 0
}

